update to include more kafka topics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -104,14 +104,15 @@ kafka.bootstrap.servers=${GENNY_KAFKA_URL:localhost:9092}
 quarkus.devservices.enabled=false
 quarkus.live-reload.instrumentation=true
 
-# Outgoing Topics
-mp.messaging.outgoing.search_eventsout.connector=smallrye-kafka
-mp.messaging.outgoing.search_eventsout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.search_eventsout.topic=search_events
 
-mp.messaging.outgoing.search_dataout.connector=smallrye-kafka
-mp.messaging.outgoing.search_dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.search_dataout.topic=search_data
+# Outgoing Topics
+mp.messaging.outgoing.dataout.connector=smallrye-kafka
+mp.messaging.outgoing.dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.dataout.topic=data
+
+mp.messaging.outgoing.valid_dataout.connector=smallrye-kafka
+mp.messaging.outgoing.valid_dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.valid_dataout.topic=valid_data
 
 mp.messaging.outgoing.webcmdsout.connector=smallrye-kafka
 mp.messaging.outgoing.webcmdsout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
@@ -121,16 +122,55 @@ mp.messaging.outgoing.webdataout.connector=smallrye-kafka
 mp.messaging.outgoing.webdataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.webdataout.topic=webdata
 
+mp.messaging.outgoing.search_eventsout.connector=smallrye-kafka
+mp.messaging.outgoing.search_eventsout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.search_eventsout.topic=search_events
+
+mp.messaging.outgoing.search_dataout.connector=smallrye-kafka
+mp.messaging.outgoing.search_dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.search_dataout.topic=search_data
+
 mp.messaging.outgoing.messagesout.connector=smallrye-kafka
 mp.messaging.outgoing.messagesout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.messagesout.topic=messages
 
+mp.messaging.outgoing.scheduleout.connector=smallrye-kafka
+mp.messaging.outgoing.scheduleout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.scheduleout.topic=schedule
+
 
 # Incoming Topics
+mp.messaging.incoming.data.connector=smallrye-kafka
+mp.messaging.incoming.data.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.data.failure-strategy=ignore
+
 mp.messaging.incoming.valid_data.connector=smallrye-kafka
 mp.messaging.incoming.valid_data.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.valid_data.failure-strategy=ignore
 
+mp.messaging.incoming.webcmds.connector=smallrye-kafka
+mp.messaging.incoming.webcmds.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.webcmds.failure-strategy=ignore
+
+mp.messaging.incoming.webdata.connector=smallrye-kafka
+mp.messaging.incoming.webdata.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.webdata.failure-strategy=ignore
+
+mp.messaging.incoming.search_events.connector=smallrye-kafka
+mp.messaging.incoming.search_events.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.search_events.failure-strategy=ignore
+
+mp.messaging.incoming.search_data.connector=smallrye-kafka
+mp.messaging.incoming.search_data.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.search_data.failure-strategy=ignore
+
+mp.messaging.incoming.messages.connector=smallrye-kafka
+mp.messaging.incoming.messages.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.messages.failure-strategy=ignore
+
+mp.messaging.incoming.schedule.connector=smallrye-kafka
+mp.messaging.incoming.schedule.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.schedule.failure-strategy=ignore
 
 ########################################################################################################################
 ########################################## Kafka Config - End ##########################################################
