add show values to init and add more kafka topics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -138,6 +138,10 @@ mp.messaging.outgoing.scheduleout.connector=smallrye-kafka
 mp.messaging.outgoing.scheduleout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.scheduleout.topic=schedule
 
+mp.messaging.outgoing.blacklistout.connector=smallrye-kafka
+mp.messaging.outgoing.blacklistout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.blacklistout.topic=blacklist
+
 
 # Incoming Topics
 mp.messaging.incoming.data.connector=smallrye-kafka
@@ -171,6 +175,10 @@ mp.messaging.incoming.messages.failure-strategy=ignore
 mp.messaging.incoming.schedule.connector=smallrye-kafka
 mp.messaging.incoming.schedule.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.schedule.failure-strategy=ignore
+
+mp.messaging.incoming.blacklist.connector=smallrye-kafka
+mp.messaging.incoming.blacklist.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.blacklist.failure-strategy=ignore
 
 ########################################################################################################################
 ########################################## Kafka Config - End ##########################################################
