--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -109,38 +109,47 @@ quarkus.live-reload.instrumentation=true
 mp.messaging.outgoing.dataout.connector=smallrye-kafka
 mp.messaging.outgoing.dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.dataout.topic=data
+mp.messaging.outgoing.dataout.merge=true
 
 mp.messaging.outgoing.valid_dataout.connector=smallrye-kafka
 mp.messaging.outgoing.valid_dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.valid_dataout.topic=valid_data
+mp.messaging.outgoing.valid_dataout.merge=true
 
 mp.messaging.outgoing.webcmdsout.connector=smallrye-kafka
 mp.messaging.outgoing.webcmdsout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.webcmdsout.topic=webcmds
+mp.messaging.outgoing.webcmdsout.merge=true
 
 mp.messaging.outgoing.webdataout.connector=smallrye-kafka
 mp.messaging.outgoing.webdataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.webdataout.topic=webdata
+mp.messaging.outgoing.webdataout.merge=true
 
 mp.messaging.outgoing.search_eventsout.connector=smallrye-kafka
 mp.messaging.outgoing.search_eventsout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.search_eventsout.topic=search_events
+mp.messaging.outgoing.search_eventsout.merge=true
 
 mp.messaging.outgoing.search_dataout.connector=smallrye-kafka
 mp.messaging.outgoing.search_dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.search_dataout.topic=search_data
+mp.messaging.outgoing.search_dataout.merge=true
 
 mp.messaging.outgoing.messagesout.connector=smallrye-kafka
 mp.messaging.outgoing.messagesout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.messagesout.topic=messages
+mp.messaging.outgoing.messagesout.merge=true
 
 mp.messaging.outgoing.scheduleout.connector=smallrye-kafka
 mp.messaging.outgoing.scheduleout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.scheduleout.topic=schedule
+mp.messaging.outgoing.scheduleout.merge=true
 
 mp.messaging.outgoing.blacklistout.connector=smallrye-kafka
 mp.messaging.outgoing.blacklistout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.blacklistout.topic=blacklist
+mp.messaging.outgoing.blacklistout.merge=true
 
 
 # Incoming Topics
