Updated to add events topic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ quarkus.index-dependency.qwandaq.artifact-id=qwandaq
 
 genny.show.values=${GENNY_SHOW_VALUES:false}
 
-genny.keycloak.url=${GENNY_KEYCLOAK_URL:http://localhost:8180}
+genny.keycloak.url=${GENNY_KEYCLOAK_URL:http://alyson.genny.life:8180}
 genny.keycloak.realm=${GENNY_REALM:internmatch}
 genny.service.username=${GENNY_SERVICE_USERNAME:service}
 genny.service.password=${GENNY_SERVICE_PASSWORD:password}
@@ -34,7 +34,7 @@ genny.oidc.client-id=${GENNY_CLIENT_ID:client_id}
 genny.oidc.credentials.secret=${GENNY_CLIENT_SECRET}
 quarkus.oidc.auth-server-url=${GENNY_KEYCLOAK_URL}/auth/realms/${GENNY_REALM}
 
-genny.service.cache.host=http://localhost
+genny.service.cache.host=http://alyson.genny.life
 genny.service.cache.port=8090
 genny.service.cache.db=true
 
@@ -78,7 +78,7 @@ quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined=true
 ########################################################################################################################
 
 # Infinispan Server address
-quarkus.infinispan-client.server-list=${INFINISPAN_URL:localhost:11222}
+quarkus.infinispan-client.server-list=${INFINISPAN_URL:alyson.genny.life:11222}
 
 # Authentication
 quarkus.infinispan-client.auth-username=${INFINISPAN_USERNAME}
@@ -98,8 +98,8 @@ quarkus.infinispan-client.client-intelligence=BASIC
 ########################################## Kafka Config - Start ########################################################
 ########################################################################################################################
 
-my.hostname=localhost
-kafka.bootstrap.servers=${GENNY_KAFKA_URL:localhost:9092}
+my.hostname=alyson2.genny.life
+kafka.bootstrap.servers=${GENNY_KAFKA_URL:alyson.genny.life:9092}
 
 quarkus.devservices.enabled=false
 quarkus.live-reload.instrumentation=true
@@ -153,6 +153,10 @@ mp.messaging.outgoing.blacklistout.merge=true
 
 
 # Incoming Topics
+mp.messaging.incoming.events.connector=smallrye-kafka
+mp.messaging.incoming.events.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.events.failure-strategy=ignore
+
 mp.messaging.incoming.data.connector=smallrye-kafka
 mp.messaging.incoming.data.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.data.failure-strategy=ignore
@@ -203,7 +207,7 @@ quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:3000
 quarkus.http.cors.methods=GET,PUT,POST,DELETE
 
-genny.api.url=${GENNY_API_URL:http://internmatch.genny.life:8280}
+genny.api.url=${GENNY_API_URL:http://alyson.genny.life.genny.life:8280}
 genny.cache.url=${genny.api.url}/service/cache/read"}
 
 ########################################################################################################################
