--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -106,6 +106,11 @@ quarkus.live-reload.instrumentation=true
 
 
 # Outgoing Topics
+mp.messaging.outgoing.eventsout.connector=smallrye-kafka
+mp.messaging.outgoing.eventsout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.eventsout.topic=events
+mp.messaging.outgoing.eventsout.merge=true
+
 mp.messaging.outgoing.dataout.connector=smallrye-kafka
 mp.messaging.outgoing.dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.dataout.topic=data
