--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -228,7 +228,7 @@ genny.cache.url=${genny.api.url}/service/cache/read"}
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss.SSSZZ} %-5p [%c{15.}] (%L) %s%e%n
 
-quarkus.log.console.level=INFO
+quarkus.log.console.level=${LOG_LEVEL:INFO}
 quarkus.log.console.color=true
 
 quarkus.log.category."io.quarkus".level=DEBUG
