add version endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 ########################################################################################################################
 ########################################## Quarkus Config - Start ######################################################
 ########################################################################################################################
-
 quarkus.http.port=8080
 quarkus.ssl.native=true
 
+quarkus.banner.path=logo.txt
 quarkus.resteasy.gzip.enabled=true 
 quarkus.resteasy.gzip.max-input=10M
 quarkus.native.native-image-xmx=6g
@@ -13,7 +13,6 @@ quarkus.native.additional-build-args=--allow-incomplete-classpath
 
 quarkus.index-dependency.qwandaq.group-id=life.genny
 quarkus.index-dependency.qwandaq.artifact-id=qwandaq
-
 ########################################################################################################################
 ########################################## Quarkus Config - End ########################################################
 ########################################################################################################################
@@ -23,6 +22,7 @@ quarkus.index-dependency.qwandaq.artifact-id=qwandaq
 ########################################################################################################################
 ########################################## Genny Config - Start ########################################################
 ########################################################################################################################
+genny.version=${project.version}
 
 genny.show.values=${GENNY_SHOW_VALUES:false}
 
@@ -41,7 +41,6 @@ genny.service.cache.db=true
 keycloak/mp-rest/url=${genny.keycloak.url}/auth/admin/realms/${genny.keycloak.realm}
 keycloak-token/mp-rest/url=${genny.keycloak.url}/auth/admin/realms/${genny.keycloak.realm}
 org.eclipse.microprofile.rest.client.propagateHeaders=Authorization
-
 ########################################################################################################################
 ########################################## Genny Config - End ##########################################################
 ########################################################################################################################
@@ -51,7 +50,6 @@ org.eclipse.microprofile.rest.client.propagateHeaders=Authorization
 ########################################################################################################################
 ########################################## MYSQL Config - Start ########################################################
 ########################################################################################################################
-
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.jdbc.min-size=5
 quarkus.datasource.jdbc.max-size=16
@@ -66,7 +64,6 @@ quarkus.datasource.username=${MYSQL_USER:genny}
 quarkus.datasource.password=${MYSQL_PASSWORD:password}
 
 quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined=true
-
 ########################################################################################################################
 ########################################## MYSQL Config - End ##########################################################
 ########################################################################################################################
@@ -76,7 +73,6 @@ quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined=true
 ########################################################################################################################
 ########################################## Infinispan Config - Start ###################################################
 ########################################################################################################################
-
 # Infinispan Server address
 quarkus.infinispan-client.server-list=${INFINISPAN_URL:alyson.genny.life:11222}
 
@@ -87,7 +83,6 @@ quarkus.infinispan-client.auth-password=${INFINISPAN_PASSWORD}
 # Infinispan client intelligence
 # Use BASIC as a Docker for Mac workaround
 quarkus.infinispan-client.client-intelligence=BASIC
-
 ########################################################################################################################
 ########################################## Infinispan Config - End #####################################################
 ########################################################################################################################
@@ -97,7 +92,6 @@ quarkus.infinispan-client.client-intelligence=BASIC
 ########################################################################################################################
 ########################################## Kafka Config - Start ########################################################
 ########################################################################################################################
-
 my.hostname=alyson2.genny.life
 kafka.bootstrap.servers=${GENNY_KAFKA_URL:alyson.genny.life:9092}
 
@@ -197,7 +191,6 @@ mp.messaging.incoming.schedule.failure-strategy=ignore
 mp.messaging.incoming.blacklist.connector=smallrye-kafka
 mp.messaging.incoming.blacklist.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.blacklist.failure-strategy=ignore
-
 ########################################################################################################################
 ########################################## Kafka Config - End ##########################################################
 ########################################################################################################################
@@ -207,14 +200,12 @@ mp.messaging.incoming.blacklist.failure-strategy=ignore
 ########################################################################################################################
 ########################################## Rest Services Config - Start ################################################
 ########################################################################################################################
-
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:3000
 quarkus.http.cors.methods=GET,PUT,POST,DELETE
 
 genny.api.url=${GENNY_API_URL:http://alyson.genny.life.genny.life:8280}
 genny.cache.url=${genny.api.url}/service/cache/read"}
-
 ########################################################################################################################
 ########################################## Rest Services Config - End ##################################################
 ########################################################################################################################
@@ -224,7 +215,6 @@ genny.cache.url=${genny.api.url}/service/cache/read"}
 ########################################################################################################################
 ########################################## Logging Config - Start ######################################################
 ########################################################################################################################
-
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss.SSSZZ} %-5p [%c{15.}] (%L) %s%e%n
 
@@ -238,9 +228,7 @@ quarkus.log.category."org.apache.kafka.clients.producer.ProducerConfig".level=ER
 quarkus.log.category."org.apache.kafka.clients.admin.AdminClientConfig".level=ERROR
 quarkus.log.category."io.smallrye.reactive.messaging.kafka".level=ERROR
 quarkus.log.category."org.eclipse.yasson.internal.Unmarshaller".level=OFF
-
 ########################################################################################################################
 ########################################## Logging Config - End ########################################################
 ########################################################################################################################
-
 
