--- a/pom.xml
+++ b/pom.xml
@@ -57,20 +57,32 @@
       <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
     </dependency>
   </dependencies>
+
   <build>
-	  <plugins>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-source-plugin</artifactId>
-		<executions>
-			<execution>
-				<id>attach-sources</id>
-				<goals>
-					<goal>jar</goal>
-				</goals>
-			</execution>
-		</executions>
-	   </plugin>
+
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/application.properties</include>
+        </includes>
+      </resource>
+    </resources>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
       <plugin>
         <groupId>${quarkus.platform.group-id}</groupId>
@@ -104,36 +116,36 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
-		<plugin>
-		  <groupId>com.mysema.maven</groupId>
-		  <artifactId>apt-maven-plugin</artifactId>
-		  <version>1.1.3</version>
-		  <executions>
-			<execution>
-			  <goals>
-				<goal>process</goal>
-			  </goals>
-			  <configuration>
-				<outputDirectory>target/generated-sources/java</outputDirectory>
-				<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-			  </configuration>
-			</execution>
-		  </executions>
-		</plugin>
-		<plugin>
-			<groupId>org.jboss.jandex</groupId>
-			<artifactId>jandex-maven-plugin</artifactId>
-			<version>1.2.1</version>
-			<executions>
-				<execution>
-					<id>make-index</id>
-					<goals>
-						<goal>jandex</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin>
-	</plugins>
+      <plugin>
+        <groupId>com.mysema.maven</groupId>
+        <artifactId>apt-maven-plugin</artifactId>
+        <version>1.1.3</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>process</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>target/generated-sources/java</outputDirectory>
+              <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.jboss.jandex</groupId>
+        <artifactId>jandex-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <executions>
+          <execution>
+            <id>make-index</id>
+            <goals>
+              <goal>jandex</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
   <profiles>
     <profile>
