Updated settings for infinispean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,8 +77,8 @@ quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined=true
 quarkus.infinispan-client.server-list=${INFINISPAN_URL:alyson.genny.life:11222}
 
 # Authentication
-quarkus.infinispan-client.auth-username=${GENNY_INFINISPAN_AUTH_USERNAME}
-quarkus.infinispan-client.auth-password=${GENNY_INFINISPAN_AUTH_PASSWORD}
+quarkus.infinispan-client.auth-username=${GENNY_INFINISPAN_CLIENT_AUTH_USERNAME:genny}
+quarkus.infinispan-client.auth-password=${GENNY_INFINISPAN_CLIENT_AUTH_PASSWORD:password}
 
 # Infinispan client intelligence
 # Use BASIC as a Docker for Mac workaround
