SHOW_VALUES default true in app.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ quarkus.index-dependency.qwandaq.artifact-id=qwandaq
 ########################################################################################################################
 genny.version=${project.version}
 
-genny.show.values=${GENNY_SHOW_VALUES:false}
+genny.show.values=${GENNY_SHOW_VALUES:true}
 
 genny.keycloak.url=${GENNY_KEYCLOAK_URL:http://alyson.genny.life:8180}
 genny.keycloak.realm=${GENNY_REALM:internmatch}
