Updated mysql setting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,11 +59,11 @@ quarkus.transaction-manager.default-transaction-timeout=${TIMEOUT:4800}
 quarkus.hibernate-orm.database.generation=none
 quarkus.hibernate-orm.second-level-caching-enabled=true
 
-quarkus.datasource.jdbc.url=jdbc:mysql://${GENNY_MYSQL_FULL_URL:alyson.genny.life:3310/gennydb?zeroDateTimeBehavior=convertToNull&serverTimezone=UTC}
+quarkus.datasource.jdbc.url=jdbc:mysql://${GENNY_MYSQL_FULL_URL:'alyson.genny.life:3310/gennydb?zeroDateTimeBehavior=convertToNull&serverTimezone=UTC'}
 quarkus.datasource.username=${MYSQL_USER:genny}
 quarkus.datasource.password=${MYSQL_PASSWORD:password}
 
-quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined=true
+quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined=true'
 ########################################################################################################################
 ########################################## MYSQL Config - End ##########################################################
 ########################################################################################################################
