MUQ-34 added runtime init class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.resteasy.gzip.enabled=true
 quarkus.resteasy.gzip.max-input=10M
 quarkus.native.native-image-xmx=6g
 
-quarkus.native.additional-build-args=--allow-incomplete-classpath
+quarkus.native.additional-build-args=--initialize-at-run-time=life.genny.qwandaq.utils.minio.Minio, --allow-incomplete-classpath
 
 quarkus.index-dependency.qwandaq.group-id=life.genny
 quarkus.index-dependency.qwandaq.artifact-id=qwandaq
